2010-09-08  Martin Jambor  <mjambor@suse.cz>

	PR other/45443
	* doc/invoke.texi: Add -fipa-cp-clone to list of switches turned on
	at -O3.

2010-09-03  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/45484
	* dwarf2out.c (flush_queued_reg_saves): Rename to...
	(dwarf2out_flush_queued_reg_saves): ... this.  No longer static.
	(dwarf2out_frame_debug): Adjust callers.
	* dwarf2out.h (dwarf2out_flush_queued_reg_saves): New prototype.
	* config/i386/i386.c (output_set_got): Call it.

	PR debug/45500
	* dwarf2out.c (rtl_for_decl_init): Give up for all generic vectors,
	not just generic vectors with BLKmode.

2010-09-02  Ian Bolton  <ian.bolton@arm.com>

	Backport from mainline
	2010-09-01  Ian Bolton  <ian.bolton@arm.com>

	* Makefile.in (tree-switch-conversion.o): Update dependencies.
	
	2010-08-19  Ian Bolton  <ian.bolton@arm.com>
	
	PR target/45070
	* config/arm/arm.c (arm_output_epilogue): Ensure that return
	value of size 1-3 is handled correctly.

	2010-08-19  Ian Bolton  <ian.bolton@arm.com>

	* tree-switch-conversion.c (gen_inbound_check): Ensure that the
	type for the conditional has wide enough range.

	2010-08-07  Marcus Shawcroft  <marcus.shawcroft@arm.com>
	
	* config/arm/linux-atomic.c (SUBWORD_VAL_CAS): Instantiate with
	'unsigned short' and 'unsigned char' instead of 'short' and 'char'.
	(SUBWORD_BOOL_CAS): Likewise.
	(SUBWORD_SYNC_OP): Likewise.
	(SUBWORD_TEST_AND_SET): Likewise.
	(FETCH_AND_OP_WORD): Parenthesise INF_OP
	(SUBWORD_SYNC_OP): Likewise.
	(OP_AND_FETCH_WORD): Likewise.
	
2010-09-01  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/45458
	* bb-reorder.c (add_labels_and_missing_jumps): Treat
	bbs ending with throwing insns like blocks ending with a call.
	(fix_up_fall_thru_edges): Likewise.

2010-09-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gimplify.c (gimplify_init_constructor): Do not create a temporary for
	a volatile LHS if the constructor has only one element.

2010-08-31  Eric Botcazou  <ebotcazou@adacore.com>
